--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'realm-android'
 
 android {
     compileOptions.incremental = false
@@ -64,6 +65,9 @@ android {
 
 repositories {
     maven { url "https://jitpack.io" }
+    maven {
+        url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+    }
 }
 
 dependencies {
@@ -110,4 +114,8 @@ dependencies {
     compile 'com.arello-mobile:moxy:0.5.4'
     compile 'com.arello-mobile:moxy-android:0.5.4'
     apt 'com.arello-mobile:moxy-compiler:0.5.4'
+
+    // stetho
+    compile 'com.facebook.stetho:stetho:1.4.0'
+    compile 'com.uphyca:stetho_realm:0.9.0'
 }
