--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.applikey.mattermost">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.applikey.mattermost.App"
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".activities.ChooseServerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,9 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.applikey.mattermost.activities.LogInActivity" />
-
+        <activity android:name=".activities.LogInActivity" />
+        <activity android:name=".activities.ChatListActivity"></activity>
     </application>
 
 </manifest>
