--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".activities.LogInActivity" />
         <activity android:name=".activities.ChatListActivity" />
         <activity android:name=".activities.ChooseTeamActivity" />
+        <activity android:name=".activities.RestorePasswordActivity"></activity>
     </application>
 
 </manifest>
