--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,27 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.ChooseServerActivity">
+        <activity
+            android:name=".activities.ChooseServerActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LogInActivity" />
-        <activity android:name=".activities.ChatListActivity" />
-        <activity android:name=".activities.ChooseTeamActivity" />
-        <activity android:name=".activities.RestorePasswordActivity" />
+        <activity
+            android:name=".activities.LogInActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ChatListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.ChooseTeamActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.RestorePasswordActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
