--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 
+
+
 android {
     compileOptions.incremental = false
 
@@ -42,6 +44,11 @@ android {
         targetSdkVersion 24
         versionCode 3
         versionName "0.1.2"
+
+        buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS", project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
+        buildConfigField "String", "PRESET_SERVER", project.hasProperty("server") ? "\"${project.ext.get("server")}\"" : '\"\"'
+        buildConfigField "String", "USER_NAME", project.hasProperty("user.name") ? "\"${project.ext.get("user.name")}\"" : '\"\"'
+        buildConfigField "String", "USER_PASSWORD", project.hasProperty("user.password") ? "\"${project.ext.get("user.password")}\"" : '\"\"'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
