Update gitignored file

--- a/app/gradle.properties
+++ b/app/gradle.properties
@@ -1,4 +1,4 @@
-user.name=mikhail.mikhaylov@applikeysolutions.com
-user.password=zxD123
 replacecred=true
+user.name=mikhail.mikhaylov@applikeysolutions.com
+user.password=zxD123awdq2e
 server=54.234.249.244
