--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,9 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.4.0'
     compile 'com.uphyca:stetho_realm:0.9.0'
 
+    //Stream API
+    compile 'com.annimon:stream:1.1.2'
+
     // crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
