--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,11 +135,15 @@ dependencies {
     apt 'com.arello-mobile:moxy-compiler:0.5.4'
 
     // stetho
-    compile 'com.facebook.stetho:stetho:1.4.0'
+    compile 'com.facebook.stetho:stetho:1.4.1'
     compile 'com.uphyca:stetho_realm:0.9.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.1'
+    //logging
+    compile 'com.jakewharton.timber:timber:4.3.1'
 
     // crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
