--- a/app/build.gradle
+++ b/app/build.gradle
@@ -144,10 +144,11 @@ dependencies {
     //Stream API
     compile 'com.annimon:stream:1.1.2'
 
+    //Realm Adapter
+    compile 'io.realm:android-adapters:1.3.0'
+
     // crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
         transitive = true;
     }
-
-    compile 'com.annimon:stream:1.1.2'
 }
