--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ android {
         versionCode 4
         versionName "0.1.3"
 
+        vectorDrawables.useSupportLibrary = true
+
         buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS", project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
         buildConfigField "String", "PRESET_SERVER", project.hasProperty("server") ? "\"${project.ext.get("server")}\"" : '\"\"'
         buildConfigField "String", "USER_NAME", project.hasProperty("user.name") ? "\"${project.ext.get("user.name")}\"" : '\"\"'
