--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
         <activity
             android:name=".activities.ChatActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activities.CreateChannelActivity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
