Added chat notify workaround

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,6 @@ dependencies {
     // views
     compile 'com.tasomaniac:delayed-progress:0.3'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
-    compile 'io.realm:android-adapters:1.3.0'
 
     // mvp
     compile 'com.arello-mobile:moxy:0.5.4'
@@ -146,7 +145,7 @@ dependencies {
     compile 'com.annimon:stream:1.1.2'
 
     //Realm Adapter
-    compile 'io.realm:android-adapters:1.3.0'
+    compile 'com.github.ReginFell:realm-android-adapters:7264600a02'
 
     // crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
