--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,10 +141,10 @@ dependencies {
     //logging
     compile 'com.jakewharton.timber:timber:4.3.1'
 
-    // Stream API
+    // stream api
     compile 'com.annimon:stream:1.1.2'
 
-    // Realm Adapter
+    // realm adapter
     compile 'com.github.ReginFell:realm-android-adapters:175990bf26'
 
     // crashlytics
@@ -154,6 +154,5 @@ dependencies {
 
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
-    // gcm
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:9.8.0'
 }
