--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,26 +5,27 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <permission
-            android:name="com.applikey.mattermost.permission.C2D_MESSAGE"
-            android:protectionLevel="signature"/>
+        android:name="com.applikey.mattermost.permission.C2D_MESSAGE"
+        android:protectionLevel="normal"/>
+
     <uses-permission android:name="com.applikey.mattermost.permission.C2D_MESSAGE"/>
 
     <application
-            android:name=".App"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:name=".App"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
         <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
 
         <activity
-                android:name=".activities.SplashActivity"
-                android:noHistory="true"
-                android:screenOrientation="portrait">
+            android:name=".activities.SplashActivity"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -32,63 +33,65 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".activities.ChooseServerActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.ChooseServerActivity"
+            android:screenOrientation="portrait"/>
         <activity
-                android:name=".activities.LogInActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.LogInActivity"
+            android:screenOrientation="portrait"/>
         <activity
-                android:name=".activities.ChatListActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.ChatListActivity"
+            android:screenOrientation="portrait"/>
         <activity
-                android:name=".activities.ChooseTeamActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.ChooseTeamActivity"
+            android:screenOrientation="portrait"/>
         <activity
-                android:name=".activities.RestorePasswordActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.RestorePasswordActivity"
+            android:screenOrientation="portrait"/>
         <activity
-                android:name=".activities.ChatActivity"
-                android:screenOrientation="portrait"/>
+            android:name=".activities.ChatActivity"
+            android:screenOrientation="portrait"/>
 
         <receiver
-                android:name="com.google.android.gms.gcm.GcmReceiver"
-                android:exported="true"
-                android:permission="com.google.android.c2dm.permission.SEND">
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.mattermost.mattermost" />
+                <!-- for Gingerbread GSF backward compat -->
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <category android:name="com.applikey.mattermost" />
             </intent-filter>
         </receiver>
 
-        <service
-                android:name="com.applikey.mattermost.gcm.GcmMessageHandler"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            </intent-filter>
-        </service>
-
         <receiver
-                android:name="com.applikey.mattermost.gcm.NotificationDismissReceiver"
-                android:exported="false" >
+            android:name="com.applikey.mattermost.gcm.NotificationDismissReceiver"
+            android:exported="false">
         </receiver>
 
         <service
-                android:name="com.applikey.mattermost.gcm.GcmInstanceIdListener"
-                android:exported="false">
+            android:name="com.applikey.mattermost.gcm.GcmMessageHandler"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
             </intent-filter>
         </service>
 
         <service
-                android:name="com.applikey.mattermost.gcm.RegistrationIntentService"
-                android:exported="false">
+            android:name="com.applikey.mattermost.gcm.RegistrationIntentService"
+            android:exported="false">
+        </service>
+
+        <service
+            android:name="com.applikey.mattermost.gcm.GcmInstanceIdListener"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
         </service>
 
         <meta-data
-                android:name="io.fabric.ApiKey"
-                android:value="0c7675012470bd5f6ee23c7d90806bb92d1c4bd8"/>
+            android:name="io.fabric.ApiKey"
+            android:value="0c7675012470bd5f6ee23c7d90806bb92d1c4bd8"/>
     </application>
 
 </manifest>
