--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activities.CreateChannelActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AddedMembersActivity"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
