--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".App"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name=".App"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.SplashActivity"
-            android:noHistory="true"
-            android:screenOrientation="portrait">
+                android:name=".activities.SplashActivity"
+                android:noHistory="true"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -22,29 +22,33 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.ChooseServerActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.ChooseServerActivity"
+                android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.LogInActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.LogInActivity"
+                android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.ChatListActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.ChatListActivity"
+                android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.ChooseTeamActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.ChooseTeamActivity"
+                android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.RestorePasswordActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.RestorePasswordActivity"
+                android:screenOrientation="portrait"/>
         <activity
-            android:name=".activities.ChatActivity"
-            android:screenOrientation="portrait"/>
+                android:name=".activities.ChatActivity"
+                android:screenOrientation="portrait"/>
         <activity android:name=".activities.CreateChannelActivity"
-            android:screenOrientation="portrait"/>
+                  android:screenOrientation="portrait"/>
+
+        <service
+                android:name=".platform.WebSocketService"
+                android:exported="false"/>
 
         <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="0c7675012470bd5f6ee23c7d90806bb92d1c4bd8"/>
+                android:name="io.fabric.ApiKey"
+                android:value="0c7675012470bd5f6ee23c7d90806bb92d1c4bd8"/>
     </application>
 
 </manifest>
