--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,9 @@ dependencies {
     // views
     compile 'com.tasomaniac:delayed-progress:0.3'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
+    compile('com.mikepenz:materialdrawer:5.7.0@aar') {
+        transitive = true
+    }
 
     // mvp
     compile 'com.arello-mobile:moxy:0.5.4'
