Added push notification action

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.ChatListActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.ChooseTeamActivity"
