Implement Channel details screen. Fix issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,4 +156,7 @@ dependencies {
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
     compile 'com.google.android.gms:play-services-gcm:9.8.0'
+
+    // animations
+    compile "com.andkulikov:transitionseverywhere:1.6.9"
 }
