--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,6 +167,6 @@ dependencies {
     compile 'com.neovisionaries:nv-websocket-client:1.30'
 
     //emoji
-    compile 'com.vanniktech:emoji:0.3.0'
+    compile 'com.vanniktech:emoji:0.4.0-SNAPSHOT'
     compile 'com.vdurmont:emoji-java:3.1.3'
 }
