--- a/app/build.gradle
+++ b/app/build.gradle
@@ -171,4 +171,7 @@ dependencies {
     //emoji
     compile 'com.vanniktech:emoji:0.4.0-SNAPSHOT'
     compile 'com.vdurmont:emoji-java:3.1.3'
+
+    //markdown
+    compile 'com.github.Commit451:bypasses:1.0.4'
 }
