--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,6 +159,10 @@ dependencies {
     // lint
     compile 'nl.littlerobots.rxlint:rxlint:1.0'
 
+    //leak canary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
     // gcm
     compile 'com.google.android.gms:play-services-gcm:9.8.0'
 
