--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
         targetSdkVersion 24
         versionCode 5
         versionName "0.2"
+        multiDexEnabled true
 
         buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS",
                 project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
@@ -181,4 +182,14 @@ dependencies {
 
     //rxpaparazzo
     compile "com.github.miguelbcr:RxPaparazzo:0.3.2"
+
+    //sticky header
+    compile ('com.timehop.stickyheadersrecyclerview:library:[0.4.3]@aar') {
+        exclude module:'com.android.support:recyclerview-v7:22.2.0'
+        exclude module:'com.android.support:support-annotations:22.2.0'
+        exclude module:'com.android.support:support-v4:22.2.0'
+    }
+
+    compile 'com.android.support:multidex:1.0.1'
+
 }
