--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
         targetSdkVersion 24
         versionCode 5
         versionName "0.2"
+        multiDexEnabled true
 
         buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS",
                 project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
@@ -181,4 +182,7 @@ dependencies {
 
     //rxpaparazzo
     compile "com.github.miguelbcr:RxPaparazzo:0.3.2"
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+
+    compile 'com.android.support:multidex:1.0.1'
 }
