--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,11 @@ plugins {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
+
 
 android {
     compileOptions.incremental = false
@@ -43,15 +45,8 @@ android {
         versionCode 5
         versionName "0.2"
         multiDexEnabled true
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS",
-                project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
-        buildConfigField "String", "PRESET_SERVER",
-                project.hasProperty("server") ? "\"${project.ext.get("server")}\"" : '\"\"'
-        buildConfigField "String", "USER_NAME",
-                project.hasProperty("user.name") ? "\"${project.ext.get("user.name")}\"" : '\"\"'
-        buildConfigField "String", "USER_PASSWORD",
-                project.hasProperty("user.password") ? "\"${project.ext.get("user.password")}\"" : '\"\"'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -74,12 +69,41 @@ android {
         }
     }
 
+    productFlavors {
+        instrumentation {
+            buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS", 'false'
+            buildConfigField "String", "PRESET_SERVER", '\"\"'
+            buildConfigField "String", "USER_NAME", '\"\"'
+            buildConfigField "String", "USER_PASSWORD", '\"\"'
+
+        }
+
+        prod {
+            buildConfigField "boolean", "SHOULD_REPLACE_CREDENTIALS",
+                    project.hasProperty("replacecred") ? "${project.ext.get("replacecred")}" : 'false'
+            buildConfigField "String", "PRESET_SERVER",
+                    project.hasProperty("server") ? "\"${project.ext.get("server")}\"" : '\"\"'
+            buildConfigField "String", "USER_NAME",
+                    project.hasProperty("user.name") ? "\"${project.ext.get("user.name")}\"" : '\"\"'
+            buildConfigField "String", "USER_PASSWORD",
+                    project.hasProperty("user.password") ? "\"${project.ext.get("user.password")}\"" : '\"\"'
+        }
+
+    }
+
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
     lintOptions {
         disable 'InvalidPackage'
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
+    kapt {
+        generateStubs = true
     }
 
 }
@@ -95,6 +119,9 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
@@ -193,5 +220,8 @@ dependencies {
     }
 
     compile 'com.android.support:multidex:1.0.1'
+
+    androidTestCompile "org.jetbrains.kotlin:kotlin-stdlib:1.0.5"
+
 
 }
