butterknife updated to 8.4.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,8 +126,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
 
-    compile 'com.jakewharton:butterknife:7.0.1' // views injections
-
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    
     // dagger 2
     provided 'org.glassfish:javax.annotation:10.0-b28'
     apt 'com.google.dagger:dagger-compiler:2.7'
