MessageRequest fixed, User icon downloading implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.MessageDetailsActivity"
+            android:theme="@style/GreyBackgroundTheme"
             android:screenOrientation="portrait" />
 
         <receiver
