--- a/app/build.gradle
+++ b/app/build.gradle
@@ -223,6 +223,9 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
     androidTestCompile "org.jetbrains.kotlin:kotlin-stdlib:1.0.5"
+
+    //progressbar
+    compile 'me.zhanghai.android.materialprogressbar:library:1.3.0'
 }
 android.variantFilter { variant ->
     if(variant.buildType.name.equals('release') && variant.getFlavors().get(0).name.equals('instrumentation')) {
