--- a/app/build.gradle
+++ b/app/build.gradle
@@ -196,7 +196,7 @@ dependencies {
     compile 'com.neovisionaries:nv-websocket-client:1.31'
 
     //emoji
-    compile 'com.vanniktech:emoji:0.4.0-SNAPSHOT'
+    compile 'com.vanniktech:emoji:0.3.0'
     compile 'com.vdurmont:emoji-java:3.1.3'
 
     //markdown
